<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">Get Stuff Done</string>
    <string name="app_author">Author: Just Do One More</string>
    <string name="description_logo"></string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_today">Today</string>
    <string name="description_lists">This Week</string>
    <string name="description_tags">This Month</string>
    <string name="description_addTask">Add Task</string>
    <string name="description_manageTasks">Tasks</string>
    <string name="description_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_today">Today</string>
    <string name="title_addTask">Add Task</string>
    <string name="title_manageTasks">Tasks</string>
    <string name="title_lists">Lists</string>
    <string name="title_tags">Tags</string>
    <string name="title_settings">Settings</string>
    <string name="default_intro">Do some stuff.</string>
    <string name="intro_today">Feature 1 content goes here.</string>
    <string name="intro_lists">Feature 2 content goes here.</string>
    <string name="intro_tags">Feature 3 content goes here.</string>
    <string name="intro_addTask">Enter the task details:</string>
    <string name="intro_manageTasks">Feature 5 content goes here.</string>
    <string name="intro_settings">Feature 6 content goes here.</string>
    <string name="about_intro">Get Stuff Done with this application!</string>
    <string name="search_intro">Search for stuff.</string>
    <string name="separator"></string>
    <string name="listListPrompt">Select the task list:</string>

</resources>